Event's relatedTarget re-targeting does not occur for manually fired mouse events created by event.initMouseEvent(). https://bugs.webkit.org/show_bug.cgi?id=102681

Reviewed by Dimitri Glazkov.

Source/WebCore:

Make sure that event's relatedTarget re-targeting occurs for mouse
events created by event.initMouseEvent().  Since user-generated
mouse events can have a relatedTarget which is same to the target
node, the algorithm which calculates event's ancestors is also
updated so that ancestors are not shrunk wrongly.

Test: fast/events/dispatch-synthetic-mouseevent.html
      fast/dom/shadow/shadow-dom-event-dispatching.html

* dom/EventDispatcher.cpp:
(WebCore::EventRelatedTargetAdjuster::adjust):
* dom/MouseEvent.cpp:
(WebCore::MouseEventDispatchMediator::create):
(WebCore::MouseEventDispatchMediator::MouseEventDispatchMediator):
(WebCore::MouseEventDispatchMediator::dispatchEvent):
* dom/MouseEvent.h:
(WebCore::MouseEventDispatchMediator::isSyntheticMouseEvent):
(MouseEventDispatchMediator):
* dom/Node.cpp:
(WebCore::Node::dispatchEvent):

LayoutTests:

* fast/dom/shadow/shadow-dom-event-dispatching-expected.txt:
* fast/dom/shadow/shadow-dom-event-dispatching.html:
* fast/events/dispatch-synthetic-mouseevent-expected.txt: Added.
* fast/events/dispatch-synthetic-mouseevent.html: Added.


Canonical link: https://commits.webkit.org/122395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136818 268f45cc-cd09-0410-ab3c-d52691b4dbfc